# clear-run

./: .gitattributes  .gitignore  README.md  requirements.txt  setup_project.sh
docker/: Dockerfile.uav  Dockerfile.ugv  docker-compose.yml  entrypoint.sh
install/: local_setup.sh  setup.sh
install/clearrun_bringup/share/clearrun_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/clearrun_bringup/share/clearrun_bringup/launch/: clearrun_full.launch.py  simulation.launch.py
install/clearrun_bringup/share/clearrun_bringup/rviz/: clearrun.rviz
install/clearrun_msgs/share/clearrun_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/clearrun_msgs/share/clearrun_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  clearrun_msgsConfig-version.cmake  clearrun_msgsConfig.cmake  clearrun_msgs__rosidl_typesupport_cExport-noconfig.cmake  clearrun_msgs__rosidl_typesupport_cExport.cmake  clearrun_msgs__rosidl_typesupport_cppExport-noconfig.cmake  clearrun_msgs__rosidl_typesupport_cppExport.cmake  clearrun_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  clearrun_msgs__rosidl_typesupport_introspection_cExport.cmake  clearrun_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  clearrun_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_clearrun_msgs__rosidl_generator_cExport-noconfig.cmake  export_clearrun_msgs__rosidl_generator_cExport.cmake  export_clearrun_msgs__rosidl_generator_cppExport.cmake  export_clearrun_msgs__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+7 more)
install/clearrun_uav/lib/clearrun_uav/: detection_node  mavros_interface  visual_servo
install/clearrun_uav/share/clearrun_uav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/clearrun_ugv/lib/clearrun_ugv/: fod_retriever  navigation_client  scoop_controller
install/clearrun_ugv/share/clearrun_ugv/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
models/: README.md
models/yolov11/: fod_detector.pt
scripts/: calibrate_camera.py  run_simulation.sh  setup_env.sh  test_connection.py
simulation/: README.md
simulation/sitl_configs/: sitl_uav.parm  sitl_ugv.parm
simulation/worlds/: runway.sdf  runway.world
src/clearrun_bringup/: package.xml  setup.cfg  setup.py
src/clearrun_bringup/clearrun_bringup/: __init__.py
src/clearrun_bringup/launch/: clearrun_full.launch.py  simulation.launch.py
src/clearrun_bringup/resource/: clearrun_bringup
src/clearrun_bringup/rviz/: clearrun.rviz
src/clearrun_msgs/: CMakeLists.txt  package.xml
src/clearrun_msgs/msg/: FodArray.msg  FodLocation.msg  ScoopCommand.msg  ScoopStatus.msg
src/clearrun_uav/: package.xml  setup.cfg  setup.py
src/clearrun_uav/clearrun_uav/: __init__.py  detection_node.py  mavros_interface.py  visual_servo.py
src/clearrun_uav/config/: detection.yaml  visual_servo.yaml
src/clearrun_uav/launch/: uav.launch.py
src/clearrun_uav/resource/: clearrun_uav
src/clearrun_ugv/: package.xml  setup.cfg  setup.py
src/clearrun_ugv/clearrun_ugv/: __init__.py  fod_retriever.py  navigation_client.py  scoop_controller.py
src/clearrun_ugv/config/: nav2_params.yaml  retriever.yaml  scoop.yaml
src/clearrun_ugv/launch/: ugv.launch.py
src/clearrun_ugv/maps/: empty_map.yaml
src/clearrun_ugv/resource/: clearrun_ugv
(+84 files in other folders)
