<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearrun_msgs</name>
  <version>1.0.0</version>
  <description>Custom ROS 2 messages for Clear-Run FOD detection and removal system</description>
  
  <maintainer email="hanzalah@example.com">Muhammad Hanzalah Javed</maintainer>
  <maintainer email="aneeq@example.com">Aneeq</maintainer>
  
  <license>MIT</license>
  
  <author email="hanzalah@example.com">Muhammad Hanzalah Javed</author>
  <author email="aneeq@example.com">Aneeq</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
