<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearrun_uav</name>
  <version>1.0.0</version>
  <description>UAV package for Clear-Run FOD detection system - includes YOLO detection and visual servoing</description>
  
  <maintainer email="hanzalah@example.com">Muhammad Hanzalah Javed</maintainer>
  <maintainer email="aneeq@example.com">Aneeq</maintainer>
  
  <license>MIT</license>
  
  <author email="hanzalah@example.com">Muhammad Hanzalah Javed</author>
  <author email="aneeq@example.com">Aneeq</author>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>mavros_msgs</depend>
  <depend>clearrun_msgs</depend>
  
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
